añadido selector de emojis

--- a/css/smswhats.css
+++ b/css/smswhats.css
@@ -276,7 +276,21 @@ section.features .feature-item i {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.round {
 
+ background-color: #fff;
+ width: auto;
+ height: auto;
+ margin: 0 auto 15px auto;
+ padding: 5px;
+ border: 1px solid #ccc;
+
+ -moz-border-radius: 11px;
+ -webkit-border-radius: 11px;
+ border-radius: 11px;
+ behavior: url(border-radius.htc);
+
+    }
 section.cta {
   position: relative;
   padding: 250px 0;
